# Real-estate-polkadot

./: .gitignore  README.md  Real-estate-polkadot - Shortcut.lnk  package-lock.json  package.json  swanky.config.json
public/: index.html
src/: App.js  flipper.json  polkadot.js
src/components/: Navbar.js  PropertyCard.js
src/data/: NavData.js  PropertyData.js
src/pages/: AllProperties.js  Homepage.js  NewProperty.js
substrate-contract/: Cargo.toml
substrate-contract/erc20/: Cargo.toml  lib.rs
substrate-contract/nyumba/: Cargo.toml  lib.rs
