[package]
name = "nyumba"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-beta", default-features = false }
ink_storage = { version = "4.0.1", default-features = false }
ink_env = { version = "4.1.0", default-features = false }
ink_prelude = { version = "4.1.0", default-features = false }

erc20 = { path = "../erc20", version="0.1.0", default-features = false, features = ["ink-as-dependency"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
name = "nyumba"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

# You need to add this if you are using division(`/`) in your contract
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    # You need to include it, otherwise during generation of metadata you will fail,
    # because rust will not build code related to `std` feature
    "erc20/std",
]
ink-as-dependency = []
